glimagesink: implement gst_video_overlay_handle_events

https://bugzilla.gnome.org/show_bug.cgi?id=736035